validator_derive_tests/tests/compile-fail/custom/type_without_reference.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(custom(function = "hello_world", arg = "String"))]
    s: String,
}

fn main() {}
